syntax = "proto3";

package proto;
option go_package = "./;proto";

import "CombatTypeArgument.proto";
import "ForwardType.proto";

message CombatInvokeEntry {
  CombatTypeArgument argument_type = 1;
  ForwardType forward_type = 2;
  bytes combat_data = 3;
}
