syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AttackResult.proto";

message EvtBeingHitInfo {
  uint32 peer_id = 12;
  AttackResult attack_result = 8;
  uint32 frame_num = 3;
}
